# ethcc-dagi-demo

./: .gitignore  README.md
data-contributor-payout/: Cargo.toml  Makefile.toml  contract.wasm
data-contributor-payout/src/: lib.rs
indexer/: setup.py
indexer/src/: main.py  seed.py
scripts/: build-and-deploy.sh  contribute.sh  run-indexer.sh  setup.sh
