[package]
name = "data-contributor-payout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# near-sdk = "5.1.0" # TODO: wait for release
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev = "d5903b7e5d26d0d341a56ac79a9f2ea17ae88c49" }
borsh = { version = "1.5.0", features = ["borsh-derive"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
